# QtAwesomeCMake

./: .gitmodules  CMakeLists.txt  readme.md
